# RLM-CLI-Starter

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  GEMINI.md  PUBLISHING_GUIDE.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings-unix.json  settings.json  settings.local.json  statusline.py
.claude/agents/: code-writer.md  gemini-analyzer.md  gemini-content.md  gemini-frontend-designer.md  gemini-image.md  gemini-research.md  reviewer.md  team-lead.md  test-writer.md  tester.md
.claude/animations/: README.md  agent-swarm.html  swarm-spinner.py
.claude/commands/: gemini-analyzer.md  gemini-content.md  gemini-frontend-designer.md  gemini-image.md  gemini-research.md  rlm-analyst.md  rlm-debug.md  rlm.md  (+17 more)
.gemini/: settings-unix.json  settings.json
.github/: copilot-instructions.md
RLM/: README.md  START-HERE.md
sandbox/: .env.example  SKILL.md  build_template.py  pyproject.toml
sandbox/docker-templates/base/: Dockerfile
sandbox/docker-templates/node/: Dockerfile
sandbox/docker-templates/python/: Dockerfile
sandbox/prompts/: browse.md  browser-testing.md  build.md  download.md  host.md  plan-build-host-test.md  plan-full-stack.md  reboot.md  sandbox.md  test.md
sandbox/sbx/: __init__.py  cli.py  errors.py  provider.py
sandbox/sbx/backends/: __init__.py  docker_backend.py  e2b_backend.py
sandbox/sbx/commands/: browser_cmd.py  exec_cmd.py  files_cmd.py  sandbox_cmd.py  setup_cmd.py
sandbox/sbx/modules/: browser.py  commands.py  files.py  sandbox.py
scripts/: diagnose-ghost-lines.ps1
(+395 files in other folders)
